--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,12 @@ function isAppInstalled() {
                     <h2>6. Create Stylish PUBG name with Symbols and Fonts</h2>
                     <p class="pspace">
                        <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that create stylish name for PUBG. It gives you many pre-generated stylish name fonts and symbols. You can use this tool to make your own special name with lots of different text styles and symbols. These stylish symbols are important if you want to make your social media and gaming profiles look attractive and stylish. You can use this tool to create:</p>
+                       <span class="badge badge-warning" style="
+    color: #212529;
+    background: #ffc107;
+    padding: 4px;
+    font-size: 20px;
+">#Tags</span>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
