--- a/index.html
+++ b/index.html
@@ -1055,40 +1055,40 @@ function isAppInstalled() {
                         <table class="table table-bordered table-dark">
                             <tbody>
                                 <tr align="center">
-                                    <td><span class="symbol">1HPツGAMER</span></td>
-                                    <td><span class="symbol">GHOST么KILLER</span></td>
+                                    <td><span class="symbol">ViperVenom</span></td>
+                                    <td><span class="symbol">IronSpartan</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">BAD彡DEVIL</span></td>
-                                    <td><span class="symbol">MONSTER〆ALI</span></td>
+                                    <td><span class="symbol">FrostBite</span></td>
+                                    <td><span class="symbol">ShadowStriker</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">KING亗HADI</span></td>
-                                    <td><span class="symbol">ASHU亗QUEEN</span></td>
+                                    <td><span class="symbol">MysticRaven</span></td>
+                                    <td><span class="symbol">NovaNinja</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">THE〆MAFIA</span></td>
-                                    <td><span class="symbol">PUBG乂LOVER</span></td>
+                                    <td><span class="symbol">SilverBullet</span></td>
+                                    <td><span class="symbol">StormChaser</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">DEAD廴SHOT</span></td>
-                                    <td><span class="symbol">PUBG々LEGEND</span></td>
+                                    <td><span class="symbol">ArcticWolf</span></td>
+                                    <td><span class="symbol">ToxicTitan</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">『MīQ͜͡ueenī』</span></td>
-                                    <td><span class="symbol">SHARP乛KILLER</span></td>
+                                    <td><span class="symbol">BlazeHawk</span></td>
+                                    <td><span class="symbol">InfernoKing</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">PUBG女JOKER</span></td>
-                                    <td><span class="symbol">BLACK父COFFIN</span></td>
+                                    <td><span class="symbol">LunarAssassin</span></td>
+                                    <td><span class="symbol">TempestGhost</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">Nのの乃彡ADI</span></td>
-                                    <td><span class="symbol"> CUTE۝PANDA</span></td>
+                                    <td><span class="symbol">ObsidianOnyx</span></td>
+                                    <td><span class="symbol"> ScarletSpectre</span></td>
                                 </tr>
                                 <tr align="center">
-                                    <td><span class="symbol">DARK〆KILLER</span></td>
-                                    <td><span class="symbol"> M͜͡r〆DEATH〻</span></td>
+                                    <td><span class="symbol">QuantumQuake</span></td>
+                                    <td><span class="symbol">TempestTitan</span></td>
                                 </tr>
                             </tbody>
                         </table>
