--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PUBG Name Generator | PUBG Stylish Name with Cool Symbols 😍</title>
-        <meta name="description" content="pubgfont is a popular and latest PUBG Name Generator that allows you to create stylish PUBG name with cool, stylish and unique symbols" />
+        <title>PUBG Name Generator | PUBG Name Maker with Stylish Symbols 😍</title>
+        <meta name="description" content="Pubgfont.com is a popular PUBG Name Generator tool that allows you to create stylish PUBG names with cool, stylish, and unique symbols." />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG name, Cool PUBG name, Unique PUBG name, Creative PUBG name, PUBG gamer name, Customized PUBG name, PUBG name ideas, Stylish symbols for PUBG name, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming name, Trending PUBG name, Unique symbols for PUBG name, Top PUBG name, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG name, Customized PUBG username, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan name, PUBG squad name, Gaming username ideas, Online game name."
@@ -351,10 +351,10 @@ function isAppInstalled() {
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.1 (Copy/Paste) 😍🔥</strong></h2>
+                    <h2 class="text-center"><strong>PUBG Name Generator Latest V6.1 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
                         Generate <b>Stylish PUBG name</b> using your favorite stylish symbols with a simple copy and paste. All the name and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
-                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest Version 6.1.
+                        them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest V6.1.
                     </p>
                 </div>
             </div>
@@ -932,7 +932,7 @@ function isAppInstalled() {
             style="display: flex; justify-content: center; align-items: center; padding: 5px;"
             class="a2a_kit a2a_kit_size_32 a2a_default_style"
             data-a2a-url="https://pubgfont.com/"
-            data-a2a-title="PUBG Name Generator | PUBG Stylish Name with Cool Symbols 😍"
+            data-a2a-title="PUBG Name Generator | PUBG Name Maker with Stylish Symbols 😍"
         >
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
@@ -959,8 +959,8 @@ function isAppInstalled() {
         <!--        Added FAQ's  -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h2 class="text-center">PUBG Name Generator with Symbols V6.0</h2>
-                <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0.</p>
+                <h2 class="text-center">PUBG Name Maker with Stylish Symbols V6.0</h2>
+                <p>Simply follow the easy steps below to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Maker V6.0.</p>
                 <ol style="padding: 10px;">
                     <li><b>'Enter Your Name'</b> in the Input Name Field Below.</li>
                     <li>Click on Your Favorite <b>'Stylish Symbol'</b>  Provided Below to Copy it.</li>
@@ -1055,7 +1055,7 @@ function isAppInstalled() {
                         <table class="table table-bordered table-dark">
                             <tbody>
                                 <tr align="center">
-                                    <td><span class="symbol">ViperVenom</span></td>
+                                    <td><span class="symbol">Vip≈erVenom</span></td>
                                     <td><span class="symbol">IronSpartan</span></td>
                                 </tr>
                                 <tr align="center">
