--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@ function isAppInstalled() {
                 <div class="col text-center">
                     <h2 class="text-center"><strong>PUBG Name Generator Latest V6.1 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
-                        Generate <b>Stylish PUBG name</b> using your favorite stylish symbols with a simple copy and paste. All the name and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
+                        Generate a <b>Stylish PUBG name</b> using your favorite stylish symbols with a simple copy and paste. All the name and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
                         them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest V6.1.
                     </p>
                 </div>
             </div>
                 <ol>
-                    <li><b>'Enter Your Name'</b> in the Input Name Field Above.</li>
+                    <li><b>'Enter Your Name'</b> in the Name Field Above.</li>
                     <li>Select Favorite Left and Right <b>'Stylish Symbols'</b> for Your Name</li>
                     <li>Customize Your Name and Click on <b>'Copy Button'</b> to copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
