--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@ window.dataLayer = window.dataLayer || [];
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-2" style="border-radius: 10px; margin: 5px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning mt-0" style="position: fixed;
+        margin-top: 30px;
+        width: 100%;
+        margin-top: 0px;
+        z-index: 5;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -168,6 +172,7 @@ window.dataLayer = window.dataLayer || [];
                 </div>
             </div>
         </nav>
+        <br>
         <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 5px; padding: 2px;">
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
