--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ window.dataLayer = window.dataLayer || [];
             </div>
         </nav>
         <br>
-        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 5px; padding: 2px;">
+        <h1 style="text-align: center; border-radius: 10px; font-size: 26px; background-color: #dee2e6; margin: 38px 5px 8px 5px; padding: 2px; ">
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
