--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PUBG Name Generator | PUBG Name Maker with Stylish Symbols 😍</title>
-        <meta name="description" content="Pubgfont.com is a popular PUBG Name Generator tool that allows you to create stylish PUBG names with cool, stylish, and unique symbols." />
+        <meta name="description" content="Create stylish name for your social media and gaming profiles for FREE - Simply Copy & Paste - Try it Now!" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG name, Cool PUBG name, Unique PUBG name, Creative PUBG name, PUBG gamer name, Customized PUBG name, PUBG name ideas, Stylish symbols for PUBG name, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming name, Trending PUBG name, Unique symbols for PUBG name, Top PUBG name, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG name, Customized PUBG username, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan name, PUBG squad name, Gaming username ideas, Online game name."
