--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PUBG Name Generator | PUBG Name Maker with Stylish Symbols 😍</title>
+        <title>PUBG Name Generator with Symbols (𝓒𝓸𝓹𝔂 & 𝓟𝓪𝓼𝓽𝓮) 😍</title>
         <meta name="description" content="Create stylish name for your social media and gaming profiles for FREE - Simply Copy & Paste - Try it Now!" />
         <meta
             name="keywords"
@@ -933,7 +933,7 @@ function isAppInstalled() {
             style="display: flex; justify-content: center; align-items: center; padding: 5px;"
             class="a2a_kit a2a_kit_size_32 a2a_default_style"
             data-a2a-url="https://pubgfont.com/"
-            data-a2a-title="PUBG Name Generator | PUBG Name Maker with Stylish Symbols 😍"
+            data-a2a-title="PUBG Name Generator with Symbols (𝓒𝓸𝓹𝔂 & 𝓟𝓪𝓼𝓽𝓮) 😍"
         >
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
