--- a/index.html
+++ b/index.html
@@ -963,9 +963,9 @@ function isAppInstalled() {
                 <h2 class="text-center">PUBG Name Maker with Stylish Symbols V6.0</h2>
                 <p>Simply follow the easy steps below to create a stylish PUBG name with your favorite stylish symbol using the PUBG Name Maker V6.0.</p>
                 <ol style="padding: 10px;">
-                    <li><b>'Enter Your Name'</b> in the Input Name Field Below.</li>
-                    <li>Click on Your Favorite <b>'Stylish Symbol'</b>  Provided Below to Copy it.</li>
-                    <li>Click on <b>'Copy Button'</b> to Copy Your Stylish PUBG Name</li>
+                    <li>'Enter Your Name' in the Input Name Field Below.</li>
+                    <li>Click on Your Favorite 'Stylish Symbol'   Provided Below to Copy it.</li>
+                    <li>Click on 'Copy Button' to Copy Your Stylish PUBG Name</li>
                 </ol>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control text-89" placeholder="Create stylish name here..." style="height: 40px;" id="copy_preview" />
