--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
+        <!-- Google AdSnese Tag -->
+        <meta name="google-adsense-account" content="ca-pub-5580564546196829">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
+     crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
 <script>
@@ -177,7 +181,7 @@ window.dataLayer = window.dataLayer || [];
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg text-center">
-                        <!-- <option value="" align="center">Select Left Side Symbol &#8964;</option> -->
+                        <option value="" align="center">Select Left Side Symbol &#8964;</option>
                         <option value="「">「</option>
                         <option value="乡">乡</option>
                         <option value="乂">乂</option>
@@ -239,7 +243,7 @@ window.dataLayer = window.dataLayer || [];
                 </div>
                 <div class="col-md-4 mb-3">
                     <select id="text_last" class="form-control form-control-lg text-center">
-                        <!-- <option value="" align="center">Select Right Side Symbol &#8964;</option> -->
+                        <option value="" align="center">Select Right Side Symbol &#8964;</option>
                         <option value="」">」</option>
                         <option value="乡">乡</option>
                         <option value="〆">〆</option>
