--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@ window.dataLayer = window.dataLayer || [];
                     </p>
                     <h2>9. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
-                        <a href="https://pubgfont.com/"><img src="pubgrename.webp" class="card-img-bottom" alt="how to change name in pubg" /></a>
+                        <a href="https://pubgfont.com/"><img src="how-to-change-name-pubg-mobile-guide.png" class="card-img-bottom" alt="how-to-change-name-pubg-mobile-guide" /></a>
                         <div class="card-body">
                             <p>Follow the mentioned steps below to rename or change your name in PUBG Mobile:</p>
                             <ol style="padding: 8px;">
