--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ window.dataLayer = window.dataLayer || [];
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg text-center">
-                        <option value="" align="center">Select Left Side Symbol &#8964;</option>
+                        <option value="" align="center" selected disabled>Select Left Side Symbol</option>
                         <option value="「">「</option>
                         <option value="乡">乡</option>
                         <option value="乂">乂</option>
@@ -242,7 +242,7 @@ window.dataLayer = window.dataLayer || [];
                 </div>
                 <div class="col-md-4 mb-3">
                     <select id="text_last" class="form-control form-control-lg text-center">
-                        <option value="" align="center">Select Right Side Symbol &#8964;</option>
+                        <option value="" align="center" selected disabled>Select Right Side Symbol</option>
                         <option value="」">」</option>
                         <option value="乡">乡</option>
                         <option value="〆">〆</option>
