--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ window.dataLayer = window.dataLayer || [];
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning" style="position: fixed;
         width: 100%;
-        z-index: 999999; border-radius: 28px; border: 2px solid white; margin-top: 2px; padding: 8px;">
+        z-index: 999999; border-radius: 28px; border: 2px solid white; margin-top: 2px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://pubgfont.com/">PUBGFONT.COM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
