--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PUBG Name Generator with Symbols (𝓒𝓸𝓹𝔂 & 𝓟𝓪𝓼𝓽𝓮) 😍</title>
-        <meta name="description" content="PUBG name generator is a tool that allows you to create stylish names for gaming and social media profiles for FREE - Simply Copy & Paste - Try it Now!" />
+        <title>PUBG Name Generator | Stylish Name with Symbols 😍🔥</title>
+        <meta name="description" content="PUBG Name Generator is a tool that allows you to create stylish names for gaming and social media profiles for FREE - Simply Copy & Paste - Try it Now!" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG name, Cool PUBG name, Unique PUBG name, Creative PUBG name, PUBG gamer name, Customized PUBG name, PUBG name ideas, Stylish symbols for PUBG name, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming name, Trending PUBG name, Unique symbols for PUBG name, Top PUBG name, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG name, Customized PUBG username, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan name, PUBG squad name, Gaming username ideas, Online game name."
@@ -882,7 +882,7 @@ window.dataLayer = window.dataLayer || [];
             style="display: flex; justify-content: center; align-items: center; padding: 5px;"
             class="a2a_kit a2a_kit_size_32 a2a_default_style"
             data-a2a-url="https://pubgfont.com/"
-            data-a2a-title="PUBG Name Generator with Symbols (𝓒𝓸𝓹𝔂 & 𝓟𝓪𝓼𝓽𝓮) 😍"
+            data-a2a-title="PUBG Name Generator | Stylish Name with Symbols 😍🔥"
         >
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
