--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@ window.dataLayer = window.dataLayer || [];
                         <table class="table table-bordered table-dark">
                             <tbody>
                                 <tr align="center">
-                                    <td><span class="symbol">Vip≈erVenom</span></td>
+                                    <td><span class="symbol">ViperVenom</span></td>
                                     <td><span class="symbol">IronSpartan</span></td>
                                 </tr>
                                 <tr align="center">
