--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@ window.dataLayer = window.dataLayer || [];
     background: #ffc107;
     padding: 4px;
     font-size: 20px;
-">#Tags</span>
+">#Keywords</span>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
