--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,7 @@ window.dataLayer = window.dataLayer || [];
     padding: 4px;
     font-size: 20px;
 ">#Keywords</span>
+<div>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
@@ -1149,16 +1150,13 @@ window.dataLayer = window.dataLayer || [];
                             <li>PUBG name for girls</li>
                         </ul>
                              <!--       Added Card -->
-                             <h2>7. How to Generate a Stylish Name for PUBG?</h2>
-                             <div class="card">
-                                 <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
-                                 <div class="card-body">
-                                     <p class="pspace">
-                                         Creating a unique and stylish PUBG name with Pubgfont is very easy. Simply type your name in the field below or paste it there, and our PUBG name generator will provide you with many unique and stylish names with symbols. You can also use different versions of the PUBG name generator offered by this tool. Once you have found the perfect name, just copy and paste it wherever you want. These name styles are also compatible with other popular games like:
-                                     </p>
-                                 </div>
-                             </div>
-                             
+                             <h2>7. How to Generate a stylish name for PUBG?</h2>
+                    <div class="card">
+                        <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
+                        <div class="card-body">
+                            <p class="pspace">
+                                Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish name with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
+                            </p>                     
 
                             <ul style="padding: 10px; list-style-type: square;">
                                 <li>PlayerUnknown's Battlegrounds (PUBG)</li>
