--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <h2 class="text-center"><strong>How to use the PUBG Name Generator Latest Version (V6.1) 😍🔥</strong></h2>
+                    <h2 class="text-center"><strong>How to use the PUBG Name Generator Latest Version (V6.1)</strong></h2>
                     <p class="pspace">
                         Generate a stylish PUBG name using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG, as we have
                         manually tested them. Here are some easy and simple steps to create a stylish name using the latest version (V6.1) of the PUBG Name Generator:
