--- a/index.html
+++ b/index.html
@@ -1125,16 +1125,14 @@
                     acquisition of special weapons, clothing, skins, and, most importantly, distinct in-game names. A multitude of individuals is engaged in playing PUBG, all in search of the perfect moniker for their in-game characters.
                 </p>
 
-                <h2>6. PUBG Name Generator to Create Stylish and Unique PUBG Usernames</h2>
+                <h2>6. PUBG Name Generator for Creating Stylish and Unique PUBG Usernames</h2>
                 <p class="pspace">
                     Are you facing difficulty in selecting a PUBG username? Worry not, as we have your back with an amazing PUBG Name Generator that is readily available for your use. This tool is highly appreciated for its ability to
                     generate stylish PUBG usernames. Many PUBG players employ this tool, incorporating various cool-looking symbols to create unique, trendy, and creative nicknames. Rest assured that all the characters produced by this tool
                     are fully compatible with PUBG Mobile.
                 </p>
                 <p class="pspace">
-                    For individuals aspiring to join professional gaming organizations, finding the right name can pose a challenge. In the realm of competitive tournaments, a moniker like "NGMehran" may not be the ideal choice. Why
-                    jeopardize your gaming reputation when you have a variety of PUBG names to choose from in the list below? If you aim to customize your in-game persona, our Pubg Name Generator offers the latest epic PUBG names that are
-                    yet to be popularized. Don't hesitate to utilize our platform and benefit from our extensive resources.
+                    If you want to join pro gaming groups, picking the right name can be tough. Using a name like "KINGjohn" might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
 
                 <h2>7. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
@@ -1219,7 +1217,7 @@
                         game you're participating in creates a lasting and positive impression on others. While being a skilled player in any game is one thing, your PUBG username should be enticing, top-notch, epic, resonant, and
                         remarkable.
                     </p>
-                    <h3>A Few Words from the Developer:</h3>
+                    <h3>Few Words from the Developer</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
                         please feel free to contact us. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience.
