--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-6 offset-md-3 mt-3">
-                    <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
+                    <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Realtime Name Preview" readonly />
                     <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
                 </div>
             </div>
