--- a/index.html
+++ b/index.html
@@ -1117,6 +1117,38 @@
                     </table>
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
+                <h2>Supported Games and Social Media Platforms</h2>
+
+        <!-- Supported Games Section -->
+        <h3>Supported Games and Social Media Platforms</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <i class="icon fas fa-gamepad"></i>
+                <h3>PUBG</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fas fa-fire"></i>
+                <h3>Free Fire</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fas fa-fighter-jet"></i>
+                <h3>Call of Duty</h3>
+            </div>
+            <!-- Add more games here -->
+            <div class="col-md-4">
+                <i class="icon fab fa-tiktok"></i>
+                <h3>TikTok</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fab fa-facebook"></i>
+                <h3>Facebook</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fab fa-instagram"></i>
+                <h3>Instagram</h3>
+            </div>
+            <!-- Add more social media platforms here -->
+        </div>
                 <h2>5. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might be familiar with the highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken numerous records that were previously unchallenged. The
