--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
         <!-- Include Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <!-- Google AdSnese Tag -->
-        <meta name="google-adsense-account" content="ca-pub-5580564546196829" />
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829" crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
         <script>
@@ -1117,10 +1115,10 @@
                     </table>
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
-                <h2>Supported Games and Social Media Platforms</h2>
+                <h1>Supported Games and Social Media Platforms</h1>
 
         <!-- Supported Games Section -->
-        <h3>Supported Games and Social Media Platforms</h3>
+        <h2>Supported Games</h2>
         <div class="row">
             <div class="col-md-4">
                 <i class="icon fas fa-gamepad"></i>
@@ -1135,6 +1133,11 @@
                 <h3>Call of Duty</h3>
             </div>
             <!-- Add more games here -->
+        </div>
+
+        <!-- Social Media Platforms Section -->
+        <h2>Social Media Platforms</h2>
+        <div class="row">
             <div class="col-md-4">
                 <i class="icon fab fa-tiktok"></i>
                 <h3>TikTok</h3>
