--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <link rel="stylesheet" href="style.css" />
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet" />
         <!-- Google AdSnese Tag -->
-        
+        <meta name="google-adsense-account" content="ca-pub-5580564546196829" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829" crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
         <script>
@@ -1114,7 +1115,7 @@
                     </table>
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
-              <h2>5. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
+                <h2>5. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might be familiar with the highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken numerous records that were previously unchallenged. The
                     mastermind behind this game is an Irishman named Brendan Greene, who served as both the developer and designer.
