--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="style.css" />
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet" />
+        <!-- Include Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <!-- Google AdSnese Tag -->
     
         <!-- Google tag (gtag.js) -->
@@ -1114,6 +1116,43 @@
                     </table>
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
+                <h2>Supported Games and Social Media Platforms</h2>
+
+        <!-- Supported Games Section -->
+        <h3>Supported Games</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <i class="icon fas fa-gamepad"></i>
+                <h3>PUBG</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fas fa-fire"></i>
+                <h3>Free Fire</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fas fa-fighter-jet"></i>
+                <h3>Call of Duty</h3>
+            </div>
+            <!-- Add more games here -->
+        </div>
+
+        <!-- Social Media Platforms Section -->
+        <h3>Social Media Platforms</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <i class="icon fab fa-tiktok"></i>
+                <h3>TikTok</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fab fa-facebook"></i>
+                <h3>Facebook</h3>
+            </div>
+            <div class="col-md-4">
+                <i class="icon fab fa-instagram"></i>
+                <h3>Instagram</h3>
+            </div>
+            <!-- Add more social media platforms here -->
+        </div>
                 <h2>5. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might be familiar with the highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken numerous records that were previously unchallenged. The
@@ -1229,9 +1268,6 @@
                         <li><a href="https://agecalcu.com/">Agecalcu - Calculate your age in seconds</a></li>
                         <li><a href="https://roas-formula.com/">ROAS Formula - Calculate ROAS</a></li>
                     </ul>
-                </div>
-            </div>
-        </div>
                     <script>
                         //  Add click event listener to symbols
                         const symbols = document.querySelectorAll(".symbol");
@@ -1318,5 +1354,8 @@
                     <!-- Google Tag Manager (noscript) -->
                     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TCWV7X3" height="0" width="0" style="display: none; visibility: hidden;"></iframe></noscript>
                     <!-- End Google Tag Manager (noscript) -->
+                </div>
+            </div>
+        </div>
     </body>
 </html>
